--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="card">
       <h2>I Love Social Media</h2>
       <ul class="list-inline">
-        <li><a href=""><i class="fab fa-facebook"></i></a></li>
-        <li><a href=""><i class="fab fa-github"></i></a></li>
-        <li><a href=""><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://www.facebook.com/threadless"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://www.yannklein.me/"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.instagram.com/eurovision/?hl=en"><i class="fab fa-instagram"></i></a></li>
       </ul>
     </div>
   </div>
